[package]
name = "braille"
version = "0.14.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.8", features = ["cargo", "derive", "env"] }
terminal_size = "0.3.0"

[dev-dependencies]
insta = "1.34.0"
