[package]
name = "braille"
description = "Print a graph to the terminal using block or braille characters"
version = "0.19.1"
edition = "2021"
repository = "https://github.com/mklein994/braille.git"
license = "MIT"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.8", features = ["cargo", "derive", "env"] }
terminal_size = "0.3.0"

[dev-dependencies]
insta = "1.34.0"

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
