[package]
name = "braille"
description = "Print a graph to the terminal using block or braille characters"
version = "0.22.0"
edition = "2021"
repository = "https://github.com/mklein994/braille.git"
license = "MIT"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
braillefb = { git = "https://github.com/mklein994/braillefb", tag = "v0.2.1" }
clap = { version = "4.4.8", features = ["cargo", "derive", "env"] }
terminal_size = "0.4.2"

[dev-dependencies]
insta = "1.34.0"

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
